Add parallel binary

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,10 @@ path = "src/lib.rs"
 name = "ayatori-driver"
 path = "src/bin.rs"
 
+[[bin]]
+name = "ayatori-par-driver"
+path = "src/par_bin.rs"
+
 [dependencies]
 clap = ""
 petgraph = ""
